[tool.poetry]
name = "poetry-example"
version = "0.1.0"
description = "Managing dependencies with Poetry"
authors = ["Luis Capelo <luis@gridai.co>"]
[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.3.7"
[tool.poetry.dev-dependencies]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
